k8s/jenkins-ci/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
 type: LoadBalancer
 ports:
  - port: 8080
    targetPort: 8080
 selector:
  app: jenkins

---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
spec:
  type: ClusterIP
  ports:
    - port: 50000
      targetPort: 50000
  selector:
    app: jenkins
