k8s/jenkins-ci/ingress-values.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: doyuni.duckdns.org
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /jenkins
